<resources>
    <string name="app_name">伴随码</string>
    <string name="risk_low">低风险</string>
    <string name="risk_medium">中风险</string>
    <string name="risk_high">高风险</string>
    <string name="risk_danger">确诊</string>
    <string name="risk_unknown">未知</string>
    <string name="risk_low_description">您近期未曾接触过确诊人员</string>
    <string name="risk_medium_description">您近期与高风险人员存在近距离伴随</string>
    <string name="risk_high_description">您近期与确诊人员存在近距离伴随</string>
    <string name="risk_danger_description">您已被检测部门标记为确诊</string>
    <string name="risk_unknown_description">联网来检查您的风险状态</string>
    <string name="text_encounter_list">近期风险伴随列表</string>
    <string name="switch_scanner_on">伴随码已经启用</string>
    <string name="switch_scanner_off">伴随码尚未启用</string>
    <string name="switch_warner_on">风险预警已经启用</string>
    <string name="switch_warner_off">风险预警尚未启用</string>
    <string name="notification_recorder_title">伴随码已经启用</string>
    <string name="notification_recorder_content">点击返回应用</string>
    <string name="notification_risk_status_reduce">风险等级降低</string>
    <string name="notification_risk_status_increase">风险等级提升</string>
    <string name="notification_risk_status_low">您已被标记为低风险</string>
    <string name="notification_risk_status_medium">您已被标记为中风险</string>
    <string name="notification_risk_status_high">您已被标记为高风险</string>
    <string name="notification_risk_status_danger">您已被标记为确诊</string>
    <string name="distance_near">近距离</string>
    <string name="distance_medium">中距离</string>
    <string name="distance_far">远距离</string>
    <string name="notification_warning_title">风险预警</string>
    <string name="notification_warning_head">您的附近检测到</string>
    <string name="notification_warning_tail">伴随</string>
    <string name="notification_channel_recorder">记录器状态</string>
    <string name="notification_channel_recorder_description">常驻通知栏以显示随身码状态</string>
    <string name="notification_channel_risk">风险状态</string>
    <string name="notification_channel_risk_description">风险等级变化时进行警告</string>
    <string name="notification_channel_warning">风险预警</string>
    <string name="notification_channel_warning_description">检测到风险警告时进行预警</string>
    <string name="toast_bluetooth_no_permission">无法启动：未被授予蓝牙权限</string>
    <string name="menu_index">首页</string>
    <string name="menu_identity">身份</string>
    <string name="menu_scanner">扫描</string>
    <string name="card_title_cache">本地缓存</string>
    <string name="card_title_user">用户</string>
    <string name="card_title_device_id">设备标识码</string>
    <string name="textErrorLoadingUserId">加载错误</string>
    <string name="textCacheUnknownExposureData">未上传的未知风险数据</string>
    <string name="textCacheRiskExposureData">未上传的中高风险数据</string>
    <string name="textErrorLoadingEncounterCount">NaN</string>
    <string name="textEncounterUnit">条</string>
    <string name="buttonSync">同步</string>
    <string name="buttonUpdate">更新</string>
    <string name="buttonUpload">上传</string>
    <string name="buttonDownload">下载</string>
    <string name="text_user">用户名</string>
    <string name="text_password">密码</string>
    <string name="text_identity">证件号</string>
    <string name="text_error_loading">加载错误</string>
    <string name="text_requires_user_name">请输入非空用户名</string>
    <string name="text_requires_password">请输入非空密码</string>
    <string name="text_requires_identity">请输入非空证件号</string>
    <string name="button_login">登录</string>
    <string name="button_logout">登出</string>
    <string name="button_register">注册</string>
    <string name="button_submit">提交</string>
    <string name="distance_type_far">远距离</string>
    <string name="distance_type_medium">中距离</string>
    <string name="distance_type_near">近距离</string>
    <string name="risk_type_low">低风险</string>
    <string name="risk_type_medium">中风险</string>
    <string name="risk_type_high">高风险</string>
    <string name="risk_type_danger">确诊</string>
    <string name="risk_type_unknown">未知</string>
    <string name="error_need_bluetooth_permission">需要蓝牙权限以提供风险记录服务</string>
    <string name="error_need_location_permission">在该安卓系统版本下，谷歌要求位置权限来启用蓝牙扫描</string>
    <string name="error_need_location_service">在该安卓系统版本下，谷歌要求启用位置服务来进行蓝牙扫描</string>
    <string name="error_need_fine_location_service">在该安卓系统版本下，谷歌要求精确位置和后台位置权限来启用蓝牙扫描</string>
    <string name="dialog_permission_title">请求权限</string>
    <string name="dialog_permission_bluetooth">该应用需要蓝牙扫描权限来实现接触记录</string>
    <string name="dialog_permission_location">安卓12以下的版本需要授予位置权限和启用位置信息才能启用蓝牙扫描，我们并不会记录或使用您的位置信息。</string>
    <string name="permission_description_bluetooth">伴随码需要使用蓝牙BLE以提供接触记录服务</string>
    <string name="permission_description_location">由于谷歌权限机制，伴随码需要定位权限来启用蓝牙扫描；不会使用、存储位置信息。</string>
    <string name="button_acknowledge">已读</string>
    <string name="button_confirm">确认</string>
    <string name="button_cancel">取消</string>
    <string name="failure_wrong_user_name">用户不存在</string>
    <string name="failure_wrong_user_password">密码错误</string>
    <string name="failure_invalid_internet">服务不可用，请检查网络</string>
    <string name="failure_name_or_identity_conflict">用户名或证件号已经被注册</string>
    <string name="request_permission_title">请求权限</string>
    <string name="request_permission_bluetooth">
        <![CDATA[
        伴随码使用蓝牙低功耗通信技术来实现伴随记录、风险预警等功能。因此，需要您提供关于蓝牙的以下权限：<br/>
        <b>(1)</b> 蓝牙广播：用于向周边伴随码设备告知您的风险等级；<br/>
        <b>(2)</b> 蓝牙扫描：用于扫描周边伴随码设备，以获取其风险等级，并记录风险接触；<br/><br/>
        伴随码的蓝牙广播中包含以下数据：<br/>
        - 伴随码随机生成的设备识别号；<br/>
        - 您当前的风险状态；<br/>
        - 设备类型，对于您而言，该值为&quot;用户&quot;而非&quot;场所&quot;<br/><br/>
        在安卓6.0至安卓11.0版本中，谷歌要求软件取得位置信息权限（于安卓10.0开始，为精确位置信息权限和后台位置信息权限）才得以启用蓝牙扫描；
        伴随码仅使用蓝牙扫描功能，不会推算、使用或存储您的任何位置信息。<br/><br/>

        如愿意继续使用伴随码，点击确认后将自动跳转到设置页面；请在设置页面中授予伴随码蓝牙权限。
    ]]>
    </string>
    <string name="request_permission_location">
        <![CDATA[
        伴随码使用蓝牙低功耗通信技术广播和扫描功能来实现伴随记录、风险预警等功能。<br/>
        在安卓6.0至安卓11.0版本中，谷歌要求软件取得位置信息权限（于安卓10.0开始，为精确位置信息权限和后台位置信息权限）才得以启用蓝牙扫描；
        伴随码仅使用蓝牙扫描功能，不会推算、使用或存储您的任何位置信息。<br/><br/>
        如果您希望不授予位置权限的情况下使用伴随码，请将系统升级至安卓12.0及以上的版本。<br/><br/>

        如愿意继续使用伴随码，点击确认后将自动跳转到设置页面；请在设置页面中授予伴随码位置权限，并启动定位服务。
    ]]>
    </string>
    <string name="button_about_policy">隐私策略</string>
    <string name="button_about_component">开源许可</string>
    <string name="about_title_policy">隐私策略</string>
    <string name="about_description_policy"><![CDATA[
        <h4>隐私权声明</h4><br/>
        <p>隐私权声明是&quot;如影随形&quot;-伴随码（以下简称&quot;本软件&quot;）保护您在使用本软件时本软件可能接触到的您的隐私的承诺，让您知悉本软件的隐私权政策和惯例，请您务必仔细阅读。一旦您选择使用我们的产品或服务，即表示您认可并接受本条款现有内容及其可能随时更新的内容：</p><br/>
        <h4>用户个人信息</h4><br/>
        <p>一般情况下，您只需提供您的用户名和证件号码即可使用本软件。</p><br/>
        <p>在使用的过程中，我们将使用您的的蓝牙BLE扫描功能以启用接触记录和风险预警功能，不会使用蓝牙信标或其他技术来推测您的位置，软件不会使用用户的本机识别码、位置信息、蓝牙设备MAC地址等隐私内容。</p><br/>
         <p><strong>注: 在安卓8到10版本，由于谷歌要求位置权限以启用蓝牙扫描功能，本软件将会向您申请模糊位置信息、精确位置信息或后台位置信息等权限，但软件并未使用这些信息，也不会储存或记录这些信息。</strong></p><br/>
        <h4>安全性</h4><br/>
        <p>我们实施了必要的安全政策、规则和技术措施，对您提供的个人信息进行严格的管理和保护，以防止非授权访问、不当使用或披露、非授权修改、非法破坏或意外丢失。</p><br/>
        <p>我们在借助第三方（如Azure的云服务）帮助我们处理、分析信息等的时候，从而使得第三方接触到您的个人信息，我们承诺对您的个人信息保密，并且尽量避免该第三方将其用于履行除我们授权服务之外的其他任何用途。</p><br/>
        <h4>免责声明</h4><br/>
        <p>在下列情况下，本软件不承担任何责任：</p><br/>
        <p>1、若因法律、法规、法令的要求，本网站可以向有关行政、司法部门或为公共安全之目的披露您的个人信息，在此情况下的任何披露，我们均不承担任何责任；</p><br/>
        <p>2、由于您将用户密码告知他人或与他人共享注册账户，由此导致的任何个人资料泄露及其他由于您个人的原因造成个人资料泄露的；</p><br/>
        <p>3、任何由于计算机病毒侵入或发作、因政府管制而造成的暂时性关闭等影响网络正常经营之不可抗力而造成的个人资料泄露、丢失、被盗用或被篡改等；</p><br/>
        <p>4、其他非因我们的故意或重大过失造成您个人信息泄露的。</p><br/>
        <h4>适用法律</h4><br/>
        <p>由于本隐私权声明而引起的一切诉讼或争议均应适用中华人民共和国法律。</p><br/>
        <p>本软件之隐私权声明之解释、修改及更新权均属于软件开发人员及运营人员。</p><br/>
        <h4>变更</h4><br/>
        <p>我们的隐私策略随时可能变更，我们会在本页面上发布隐私策略所做的任何变更。</p><br/>
    ]]>
    </string>
    <string name="about_title_components">开源许可</string>
</resources>