<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="userInformationPresenter"
            type="edu.upc.shadowcode.presenters.UserInformationPresenter" />
        <variable
            name="device"
            type="edu.upc.shadowcode.models.DeviceModel" />
        <variable
            name="descriptionPresenter"
            type="edu.upc.shadowcode.presenters.DescriptionPresenter" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        tools:context=".views.SettingFragment">

        <!--用户信息卡片-->
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="9pt"
                    android:textStyle="bold"
                    android:text="@string/card_title_device_id" />

                <TextView
                    android:id="@+id/textDeviceId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@{userInformationPresenter.user.deviceId.toString()}" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!--缓存数据卡片-->
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="9pt"
                    android:textStyle="bold"
                    android:text="@string/card_title_cache" />
                <!--本地缓存接触数据-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="10dp"
                        android:text="@string/textCacheUnknownExposureData" />

                    <TextView
                        android:id="@+id/textEncounterCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="3dp"
                        android:text="@{String.valueOf(device.cachedUnknownExposures.size())}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="3dp"
                        android:text="@string/textEncounterUnit" />
                </LinearLayout>
                <!--本地缓存风险接触数据-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="10dp"
                        android:text="@string/textCacheRiskExposureData" />

                    <TextView
                        android:id="@+id/textRiskEncounterCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="3dp"
                        android:text="@{String.valueOf(device.cachedRiskExposures.size())}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="3dp"
                        android:text="@string/textEncounterUnit" />
                </LinearLayout>

                <Button
                    android:id="@+id/buttonSyncLocalCache"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:background="@drawable/round_button_selector"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/buttonSync"
                    android:textColor="@color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!--用户信息卡片-->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardUserInformation"
            app:cardCornerRadius="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="9pt"
                    android:textStyle="bold"
                    android:text="@string/card_title_user" />

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_user" />

                    <TextView
                        android:id="@+id/textUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@{userInformationPresenter.user.name}" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_identity" />

                    <TextView
                        android:id="@+id/textUserId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@{userInformationPresenter.user.displayingIdentity}" />
                </LinearLayout>

                <Button
                    android:id="@+id/buttonLogout"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:background="@drawable/round_button_selector"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/button_logout"
                    android:onClick="@{userInformationPresenter.logoutListener}"
                    android:textColor="@color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!--用户登录卡片-->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardUserLogin"
            app:cardCornerRadius="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="3dp"
                    android:textSize="9pt"
                    android:textStyle="bold"
                    android:text="@string/card_title_user" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textLayoutUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_user">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textFieldUser"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:maxLines="1"
                            android:imeOptions="actionNext" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textLayoutPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true"
                        android:hint="@string/text_password">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textFieldPassword"
                            android:inputType="textPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textLayoutIdentity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:passwordToggleEnabled="true"
                        android:hint="@string/text_identity">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textFieldIdentity"
                            android:inputType="number"
                            android:maxLines="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonLogin"
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/round_button_selector"
                        android:layout_marginStart="10dp"
                        android:onClick="@{userInformationPresenter.loginListener}"
                        android:text="@string/button_login"
                        android:textColor="@color/white" />

                    <CheckBox
                        android:id="@+id/checkBoxRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="10dp"
                        android:onClick="@{userInformationPresenter.registerCheckBoxListener}"
                        android:text="注册" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonShowPolicy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="1dp"
                    android:background="@drawable/stack_button_top_selector"
                    android:onClick="@{descriptionPresenter.aboutPolicyListener}"
                    android:text="@string/button_about_policy" />

                <Button
                    android:id="@+id/buttonShowComponents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/stack_button_bottom_selector"
                    android:onClick="@{descriptionPresenter.aboutComponentsListener}"
                    android:text="@string/button_about_component" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
</layout>